change file directories

--- a/index.html
+++ b/index.html
@@ -5,25 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- starter links -->
-    <link rel="stylesheet" href="assets/css/aos.css">
-    <link rel="stylesheet" href="assets/css/bootstrap-icons.css">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/glightbox.min.css">
-    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
-    <!-- main style sheet  -->
-    <link rel="stylesheet" href="assets/custom/style.css">
+
+    <!--==================================== SETUP CSS VENDOR FILE LINKS ================================= -->
+
+    <link rel="stylesheet" href="Assets/vendor/aos/aos.css">
+    <link rel="stylesheet" href="Assets/vendor/boxicons/css/boxicons.min.css">
+    <link rel="stylesheet" href="Assets/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="Assets/vendor/glightbox/css/glightbox.min.css">
+    <link rel="stylesheet" href="Assets/vendor/OwlCarousel/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="Assets/vendor/OwlCarousel/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="Assets/vendor/swiper/swiper-bundle.min.css">
+
+    <!--==================================== SETUP CSS MAIN FILE LINK ================================= -->
+    <link rel="stylesheet" href="Assets/css/style.css">
+
 </head>
 <body>
     
 
 
+    <!--==================================== SETUP JS VENDOR FILE LINKS ================================= -->
 
-    <script src="assets/js/aos.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/glightbox.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/swiper-bundle.min.js"></script>
-    <script src="assets/custom/main.js"></script>
+    <script src="Assets/vendor/aos/aos.js"></script>
+    <script src="Assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="Assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="Assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="Assets/vendor/jquery/jquery.min.js"></script>
+    <script src="Assets/vendor/jquery/jquery.slim.min.js"></script>
+    <script src="Assets/vendor/OwlCarousel/js/owl.carousel.min.js"></script>
+    <script src="Assets/vendor/swiper/swiper-bundle.min.js"></script>
+
+    <!--==================================== SETUP JS MAIN FILE LINK ================================= -->
+
+    <script src="Assets/js/main.js"></script>
+
 </body>
 </html>
