--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 
     <link rel="stylesheet" href="Assets/vendor/aos/aos.css">
     <link rel="stylesheet" href="Assets/vendor/boxicons/css/boxicons.min.css">
-    <link rel="stylesheet" href="Assets/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="Assets/vendor/glightbox/css/glightbox.min.css">
-    <link rel="stylesheet" href="Assets/vendor/OwlCarousel/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="Assets/vendor/OwlCarousel/css/owl.theme.default.min.css">
+    <!-- <link rel="stylesheet" href="Assets/vendor/OwlCarousel/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="Assets/vendor/OwlCarousel/css/owl.theme.default.min.css"> -->
     <link rel="stylesheet" href="Assets/vendor/swiper/swiper-bundle.min.css">
 
     <!--==================================== SETUP CSS MAIN FILE LINK ================================= -->
@@ -22,17 +21,62 @@
 </head>
 <body>
     
+    <!--==================================== NAVBAR STRUCTURE DESIGN ================================= -->
+        <header class="header">
+            <nav class="navbar">
+                <div class="container">
+                    <div class="flex flex-between">
+                        <div class="navbar-logo">
+                            <a href="#">
+                                <img src="assets/img/Logo.png"  alt="">
+                            </a>
+                        </div>
+                        <div class="navbar-content flex">
+                            <div class="navbar_main-menu flex">
+                                <div class="close_menu">
+                                    <i class='bx bx-x'></i>
+                                </div>
+                                <ul class="flex">
+                                    <li><a class="active" href="#">Home</a></li>
+                                    <li><a href="#">AboutMe</a></li>
+                                    <li><a href="#">Gallery</a></li>
+                                    <li><a href="#">Projects</a></li>
+                                    <li><a href="#">caseStudies</a></li>
+                                    <li><a href="#">Blogs</a></li>
+                                    <li><a href="#">Podcast</a></li>
+                                </ul>
+                            </div>
+                            <div class="navbar-button flex">
+                                <form action="">
+                                    <div class="form-btn">
+                                        <button class="btn btn-yellow nav-btn flex">
+                                            <img src="assets/img/simple-icons_buymeacoffee.png" alt="">
+                                            <span>buy Me a Coffee</span>
+                                        </button>
+                                    </div>
+                                </form>
+                                <div class="show_menu">
+                                    <i class='bx bx-menu-alt-right'></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
+
 
 
     <!--==================================== SETUP JS VENDOR FILE LINKS ================================= -->
 
     <script src="Assets/vendor/aos/aos.js"></script>
-    <script src="Assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="Assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
     <script src="Assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="Assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="Assets/vendor/jquery/jquery.min.js"></script>
-    <script src="Assets/vendor/jquery/jquery.slim.min.js"></script>
-    <script src="Assets/vendor/OwlCarousel/js/owl.carousel.min.js"></script>
+    <!-- <script src="Assets/vendor/isotope-layout/isotope.pkgd.min.js"></script> -->
+    <!-- <script src="Assets/vendor/jquery/jquery.min.js"></script>
+    <script src="Assets/vendor/jquery/jquery.slim.min.js"></script> -->
+    <!-- <script src="Assets/vendor/OwlCarousel/js/owl.carousel.min.js"></script> -->
     <script src="Assets/vendor/swiper/swiper-bundle.min.js"></script>
 
     <!--==================================== SETUP JS MAIN FILE LINK ================================= -->
