hero section problem solved

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                         <h1 class="hero_title" style="margin:24px 0;">I’m Samarjit,
                             A Problem solver
                             and a Storyteller</h1>
-                            <div class="btn-group">
+                            <div class="btn-group flex">
                                 <button class="btn hero_btn btn-yellow flex">
-                                    <span>About me</span>
+                                    <span style="margin-right: 6px;">About me</span>
                                     <img src="assets/img/chevron-right-square.svg" alt="">
                                 </button>
                                 <button class="btn hero_btn btn_bdr ">
@@ -101,19 +101,6 @@
                                 🎨  DESIGN
                             </span>
                         </div>
-                        <!-- <div class="img_contents">
-                            <img src="assets/img/home/12 1.png" alt="" >
-                            
-                                <span class="btn tech_btn">
-                                    🔔 TECH
-                                </span>
-                                <span class="btn design_btn">
-                                    🎨  DESIGN
-                                </span>
-                            </div>
-                            
-                        </div> -->
-
                     </div>
                 </div>
         </section>
