--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <section id="hero">
                 <div class="hero-content grid">
-                    <div class="hero-details" data-aos="fade-up" >
+                    <div class="hero-details" data-aos="fade-right" >
                         <button class="btn hello_btn">
                             👋 Hello All
                         </button>
@@ -89,7 +89,7 @@
                                 </button>
                             </div>
                     </div>
-                    <div class="hero_img-contents" data-aos="fade-up">
+                    <div class="hero_img-contents" data-aos="fade-left" data-aos-delay="300">
                         <div class="img-content">
                             <img src="assets/img/home/12 1.png" alt="">
                             <div class="back-img">
@@ -212,7 +212,7 @@
                     </div>
 
 
-                    <div class="single-box span-2 box4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="single-box span-2 box4" data-aos="fade-left" data-aos-delay="300">
                         <button class="btn btn-box">PODCAST</button>
                         <div class="box-details">
                             <div class="box-images flex flex-between">
