complete home section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     
-    <!--==================================== NAVBAR STRUCTURE DESIGN ================================= -->
+    <!--==================================== NAVBAR STRUCTURE LAYOUT ================================= -->
         <header class="header">
             <nav class="navbar">
                 <div class="container">
@@ -50,7 +50,7 @@
                                 <form action="">
                                     <div class="form-btn">
                                         <button class="btn btn-yellow nav-btn flex">
-                                            <img src="assets/img/simple-icons_buymeacoffee.png" alt="">
+                                            <img src="assets/img/simple-icons_buymeacoffee.png" alt="" class="animation">
                                             <span>buy Me a Coffee</span>
                                         </button>
                                     </div>
@@ -65,10 +65,11 @@
             </nav>
         </header>
 
-    <!--==================================== MAIN SECTION STRUCTURE DESIGN ================================= -->
+    <!--==================================== MAIN SECTION STRUCTURE LAYOUT ================================= -->
+
     <main>
-        <!-- data-aos-delay="300" -->
-        <!--==================================== HERO SECTION STRUCTURE DESIGN ================================= -->
+
+        <!--==================================== HERO SECTION STRUCTURE LAYOUT ================================= -->
 
         <section id="hero">
                 <div class="hero-content grid">
@@ -106,7 +107,7 @@
                 </div>
         </section>
 
-        <!--==================================== CASES SECTION STRUCTURE DESIGN ================================= -->
+        <!--==================================== CASES SECTION STRUCTURE LAYOUT ================================= -->
 
         <section class="CaseStudies">
             <div class="container">
@@ -150,7 +151,7 @@
             </div>
         </section>
 
-    <!--==================================== SETUP JS VENDOR FILE LINKS ================================= -->
+        <!--==================================== CASE BOXES SECTION STRACTURE LAYOUT ================================= -->
 
 
         <section class="sec_boxes">
@@ -246,9 +247,78 @@
                 </div>
             </div>
         </section>
-
         
+        <!--==================================== SUBSCRIPTION SECTION STRACTURE LAYOUT ================================= -->
 
+        <section class="subscribe">
+            <div class="subs_content" style="text-align: center;padding: 0 10px;">
+                <div class="subs_icon flex">
+                    <img src="assets/img/image 2.png" alt="" >
+                </div>
+                <div class="subs_details">
+                    <h2>Subscribe For the lastest updates</h2>
+                    <p>Subscribe to newsletter and never miss the new post every week.</p>
+                </div>
+                <form action="" class="subs_form">
+                    <div class="form-group">
+                        <input type="text" placeholder="Enter your email here....">
+                        <button class="btn btn-yellow">Subscribe</button>
+                    </div>
+                </form>
+            </div>
+        </section>
+        <!--==================================== WORKING SECTION STRACTURE LAYOUT ================================= -->
+        <section class="working">
+            <div class="work_content flex">
+                <div class="work-img">
+                    <img src="assets/img/home/Rectangle 81.png" alt="">
+                </div>
+                <div class="work_details">
+                    <h2>Let’s work together and make everything super cute and super useful.</h2>
+                    <button class="btn btn_bdr">
+                        Contact Me
+                    </button>
+                </div>
+            </div>
+        </section>
+        <!--==================================== FOOTER SECTION STRACTURE LAYOUT ================================= -->
+        <footer class="footer" style="text-align: center;">
+            <div class="container">
+                <div class="follow">
+                    <span> Follow me on</span>
+                    <img src="assets/img/home/👇.png" alt="">
+                </div>
+                <div class="links">
+                    <a href="#" data-aos="fade-up" data-aos-delay="100">
+                        <img src="assets/img/FB2OctDenoiserBeauty_002.png" alt="">
+                    </a>
+                    <a href="#" data-aos="fade-up" data-aos-delay="200">
+                        <img src="assets/img/InstagramOctDenoiserBeauty_001 copy.png" alt="">
+                    </a>
+                    <a href="#" data-aos="fade-up" data-aos-delay="300">
+                        <img src="assets/img/Twitter (1).png" alt="">
+                    </a>
+                    <a href="#" data-aos="fade-up" data-aos-delay="400">
+                        <img src="assets/img/LinkedIn (1).png" alt="">
+                    </a>
+                    <a href="#" data-aos="fade-up" data-aos-delay="500">
+                        <img src="assets/img/Dribbble.png" alt="">
+                    </a>
+                    <a href="#" data-aos="fade-up" data-aos-delay="600">
+                        <img src="assets/img/Discord.png" alt="">
+                    </a>
+                    <a href="#" data-aos="fade-up" data-aos-delay="700">
+                        <img src="assets/img/github-2950150-2447911 1.png" alt="">
+                    </a>
+                    <a href="#" data-aos="fade-up" data-aos-delay="800">
+                        <img src="assets/img/Youtube.png" alt="">
+                    </a>
+                </div>
+                <div class="copyright" style="text-align: right;">
+                    <p>© <span id="year">2020</span> Made With ❤️ by @samarjiit</p>
+                </div>
+            </div>
+        </footer>
     </main>
 
 
