--- a/index.html
+++ b/index.html
@@ -323,7 +323,9 @@
         </div>
     </footer>
 
-
+    <button class="btn fixed_btn">
+        <i class='bx bx-up-arrow-alt'></i>
+    </button>
     <!--==================================== SETUP JS VENDOR FILE LINKS ================================= -->
 
     <script src="assets/vendor/aos/aos.js"></script>
