working on post section

--- a/blog.html
+++ b/blog.html
@@ -122,7 +122,7 @@
                             <img src="assets/img/blog/img-1.jpg" alt="" class="img-fluid" >
                         </div>
                         <div class="blog_details">
-                            <h3>Understanding the Gatsby lifecycle</h3>
+                            <h3><a href="post.html">Understanding the Gatsby lifecycle</a></h3>
                             <p>At Narative, we’ve been fans of Gatsby from day one, using it to build performant and flexible products for both clients and ourselves. With th...</p>
                             <a href="#"> June 14th  ·  15min read</a>
                         </div>
@@ -132,7 +132,7 @@
                             <img src="assets/img/blog/img.jpg" alt="" class="img-fluid">
                         </div>
                         <div class="blog_details">
-                            <h3>Why we built a company before building a product</h3>
+                            <h3><a href="post.html">Why we built a company before building a product</a></h3>
                             <p>At Narative, we’ve been fans of Gatsby from day one...</p>
                             <a href="#"> June 14th  ·  15min read</a>
                         </div>
@@ -142,7 +142,7 @@
                             <img src="assets/img/blog/img-3.jpg" alt="" class="img-fluid">
                         </div>
                         <div class="blog_details">
-                            <h3>Building the new Hopper.com</h3>
+                            <h3><a href="post.html">Building the new Hopper.com</a></h3>
                             <p>Creating a new website for Hopper, one of the top 4 most downloaded travel apps in the U.S, along with Uber, Ly...</p>
                             <a href="#"> June 14th  ·  15min read</a>
                         </div>
@@ -152,7 +152,7 @@
                             <img src="assets/img/blog/img-2.jpg" alt="" class="img-fluid">
                         </div>
                         <div class="blog_details">
-                            <h3>How Figma changed the way we design</h3>
+                            <h3><a href="post.html">How Figma changed the way we design</a></h3>
                             <p>To understand why Figma is the best design tool for our company, you have to understand what we do. As a designer, I’v...</p>
                             <a href="#"> June 14th  ·  15min read</a>
                         </div>
@@ -162,7 +162,7 @@
                             <img src="assets/img/blog/img-4.jpg" alt="" class="img-fluid">
                         </div>
                         <div class="blog_details">
-                            <h3>Why Narative loves Gatsby</h3>
+                            <h3><a href="">Why Narative loves Gatsby</a></h3>
                             <p>To understand why we love Gatsby you have to understand what we do at Narative. Narative is a digital studio that focuses on...</p>
                             <a href="#"> June 14th  ·  15min read</a>
                         </div>
@@ -172,7 +172,7 @@
                             <img src="assets/img/blog/img-5.jpg" alt="" class="img-fluid">
                         </div>
                         <div class="blog_details">
-                            <h3>Building Hopper’s Media Centre</h3>
+                            <h3><a href="post.html">Building Hopper’s Media Centre</a></h3>
                             <p>Creating a new website for Hopper, one of the top 4 most downloaded travel apps in the U.S, along with Uber, Ly...</p>
                             <a href="#"> June 14th  ·  15min read</a>
                         </div>
