complete post section

--- a/post.html
+++ b/post.html
@@ -113,12 +113,75 @@
                               <img src="assets/img/blog/img-5.jpg" class="img-fluid"  alt="">
                           </div>
                       </div>
-                      
-                      
-
                     </div>
                     <div class="swiper-pagination"></div>
                   </div>
+            </section>
+            <section class="post_content">
+                <div class="container">
+                    <div class="post_texts">
+                        <blockquote>
+                            <p>
+                                In my experience, the challenges that growing companies struggle with rarely stem from a lack of good ideas. Good ideas are everywhere.
+                            </p>
+                            <p>But it takes more than good ideas to build and grow a business. It takes people to bring them into reality. Are those people collaborating and sharing their expertise, or are they in conflict and keeping it to themselves?</p>
+                            <p>Do they have the resources necessary to execute on their ideas? Or are they constantly under pressure to pluck only the lowest-hanging fruit through bare minimum means, while putting their greatest ambitions on the back-burner?</p>
+                            <p>These are the circumstances that suffocate creativity and destroy value in an organization. That’s why I knew that if I was going to start a company, our first product would have to be the company itself.</p>
+                        </blockquote>
+                        <div style="text-align: center;">
+                            <img src="assets/img/blog/divider.png" alt="" style="max-width: 100%;">
+                        </div>
+
+                        <blockquote>
+                            <p>Companies themselves are a kind of product, distinct from the products they create. They are systems that process inputs (such as creative work and technology) into more valuable outputs — the products and services that are ultimately sold. The ability to effectively transform those inputs into outputs essentially defines the potential of a company.</p>
+                        </blockquote>
+
+                        <h2>Companies themselves are a kind of product, distinct from the products they create.</h2>
+
+                        <blockquote>
+                            <p>We’re excited to move forward with trust at the center of everything that we do, to meet like-minded companies with big ideas we can help bring to life, and to share more of that journey here with you.</p>
+                            <h4>Narative is a studio creating impactful digital products and strategies for growing companies — including itself. Learn more about what we do and get in touch with us at 
+                            <a href="">Narative.co.</a>
+                            </h4>
+                        </blockquote>
+
+                        <div class="divider flex flex-between">
+                            <a href="">More articles from Francisco</a>
+                            <div class="dr"></div>
+                        </div>
+
+                        <div class="post_time flex" style="margin-bottom: 30px;">
+                            <a href="">Posted on Jan 2, 2019 <br>
+                            By Thiago Costa, Co-founder and CEO</a>
+                        </div>
+
+                    </div>
+
+                    <div class="blogs_content blogH" id="Blogview">
+
+                        <div data-aos="fade-right" class="h-3 single_content">
+                            <div class="content_img">
+                                <img src="assets/img/blog/img-1.jpg" alt="" class="img-fluid" >
+                            </div>
+                            <div class="blog_details">
+                                <h3><a href="post.html">Understanding the Gatsby lifecycle</a></h3>
+                                <p>At Narative, we’ve been fans of Gatsby from day one, using it to build performant and flexible products for both clients and ourselves. With th...</p>
+                                <a href="#"> June 14th  ·  15min read</a>
+                            </div>
+                        </div>
+
+                        <div data-aos="fade-left" class="h-2 single_content">
+                            <div class="content_img">
+                                <img src="assets/img/blog/img.jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="blog_details">
+                                <h3><a href="post.html">Why we built a company before building a product</a></h3>
+                                <p>At Narative, we’ve been fans of Gatsby from day one...</p>
+                                <a href="#"> June 14th  ·  15min read</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
 
     </main>
