working on podcast graph

--- a/podcast.html
+++ b/podcast.html
@@ -101,7 +101,82 @@
                 </div>
                 </div>
             </div>
+        </section> 
+
+        <!--==================================== PODCASTS SERVERS SECTION STRACTURE LAYOUT ================================= -->
+
+        <section class="podcast_av">
+            <div class="container">
+                <div class="av_content flex flex-between">
+                    <div class="av_title">
+                        <h4>Podcast Available On</h4>
+                    </div>
+                    <div class="av_servers">
+                        <ul>
+                            <li>
+                                <a href="#" class="flex" ><img src="assets/img/podcast/Group 40.png" alt=""> <span>Apple Podcasts</span> </a>
+                            </li>
+                            <li>
+                                <a href="#" class="flex"><img src="assets/img/podcast/Sound.png" alt=""><span>SOUNDCLOUD</span></a>
+                            </li>
+                            <li>
+                                <a href="#" class="flex"><img src="assets/img/podcast/Group 41.png" alt=""><span>Goggle Podcasts</span></a>
+                            </li>
+                            <li>
+                                <a href="#" class="flex"><img src="assets/img/podcast/Vector (1).png" alt=""><span>Spotify</span></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </section>
+
+        <!--==================================== PODCASTS GRAPHS SECTION STRACTURE LAYOUT ================================= -->
+
+        <section class="graph">
+            <div class="container">
+                <div class="graph_content grid">
+                    <div class="single_graph blue">
+                        <div class="graph_img">
+                            <img src="assets/img/podcast/Icon.png" alt="">
+                        </div>
+                        <div class="graph_text">
+                            <h2>20+</h2>
+                            <h3>Podcasts</h3>
+                        </div>
+                    </div>
+                    <div class="single_graph green up">
+                        <div class="graph_img">
+                            <img src="assets/img/podcast/Icon (1).png" alt="">
+                        </div>
+                        <div class="graph_text">
+                            <h2>5000+</h2>
+                            <h3>Views</h3>
+                        </div>
+                    </div>
+                    <div class="single_graph yellow">
+                        <div class="graph_img">
+                            <img src="assets/img/podcast/Icon (2).png" alt="">
+                        </div>
+                        <div class="graph_text">
+                            <h2>1000+</h2>
+                            <h3>Subscribers</h3>
+                        </div>
+                    </div>
+                    <div class="single_graph red up">
+                        <div class="graph_img">
+                            <img src="assets/img/podcast/Icon (3).png" alt="">
+                        </div>
+                        <div class="graph_text">
+                            <h2>3000+</h2>
+                            <h3>Listeners</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
 </main>
 
 <!--==================================== FOOTER SECTION STRACTURE LAYOUT ================================= -->
