--- a/post.html
+++ b/post.html
@@ -38,10 +38,10 @@
                                 </div>
                                 <ul class="flex">
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="#">AboutMe</a></li>
-                                    <li><a href="#">Gallery</a></li>
-                                    <li><a href="#">Projects</a></li>
-                                    <li><a href="#">caseStudies</a></li>
+                                    <li><a href="about.html">AboutMe</a></li>
+                                    <li><a href="gallery.html">Gallery</a></li>
+                                    <li><a href="projects.html">Projects</a></li>
+                                    <li><a href="case_study.html">caseStudies</a></li>
                                     <li><a class="active" href="blog.html">Blogs</a></li>
                                     <li><a href="podcast.html">Podcast</a></li>
                                 </ul>
