fix some problem

--- a/index.html
+++ b/index.html
@@ -274,9 +274,11 @@
                 </div>
                 <div class="work_details">
                     <h2>Let’s work together and make everything super cute and super useful.</h2>
-                    <button class="btn btn_bdr">
-                        Contact Me
-                    </button>
+                    <form action="contact.html">
+                        <button class="btn hero_btn btn_bdr">
+                            Contact Me
+                        </button>
+                    </form>
                 </div>
             </div>
         </section>
