--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
             <div class="container">
                 <h1 class="section_title">Projects </h1>
                 <div class="project_content grid">
-                    <div class="single_project" data-aos="fade-right">
+                    <div class="single_project" data-aos="fade-up">
                         <div class="project_img">
                             <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
                         </div>
@@ -83,7 +83,7 @@
                             <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
                         </div>
                     </div>
-                    <div class="single_project" data-aos="fade-left">
+                    <div class="single_project" data-aos="fade-up" data-aos-delay="200">
                         <div class="project_img">
                             <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
                         </div>
@@ -92,7 +92,7 @@
                             <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
                         </div>
                     </div>
-                    <div class="single_project" data-aos="fade-right">
+                    <div class="single_project" data-aos="fade-up" data-aos-delay="300">
                         <div class="project_img">
                             <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
                         </div>
@@ -101,7 +101,7 @@
                             <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
                         </div>
                     </div>
-                    <div class="single_project" data-aos="fade-left">
+                    <div class="single_project" data-aos="fade-up" >
                         <div class="project_img">
                             <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
                         </div>
@@ -110,7 +110,7 @@
                             <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
                         </div>
                     </div>
-                    <div class="single_project" data-aos="fade-right">
+                    <div class="single_project" data-aos="fade-up" data-aos-delay="200">
                         <div class="project_img">
                             <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
                         </div>
@@ -119,7 +119,7 @@
                             <h3>Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
                         </div>
                     </div>
-                    <div class="single_project" data-aos="fade-left">
+                    <div class="single_project" data-aos="fade-up" data-aos-delay="100">
                         <div class="project_img">
                             <img src="assets/img/article-wide (2).png" class="img-fluid" alt="">
                         </div>
